# opencv-put-chinese

./: .gitignore  CMakeLists.txt  README.md  cvx.cpp  main.cpp
libs/freetype/libs/: libfreetype.6.20.1.dylib
libs/opencv/include/opencv2/: cvconfig.h
libs/opencv/libs/: libopencv_calib3d.dylib  libopencv_core.409.dylib  libopencv_features2d.4.9.0.dylib  libopencv_flann.dylib  libopencv_highgui.409.dylib  libopencv_imgcodecs.409.dylib  libopencv_imgproc.409.dylib  libopencv_java490.dylib  libopencv_ml.dylib  libopencv_objdetect.dylib  libopencv_photo.4.9.0.dylib  libopencv_stitching.409.dylib  libopencv_video.4.9.0.dylib  libopencv_videoio.409.dylib
